<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gui.GameActivity">

    <item
        android:id="@+id/toolbar_game_new_puzzle"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/new_game"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_game_reset_puzzle"
        android:icon="@drawable/ic_renew_24dp"
        android:title="@string/reset_game"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_game_puzzle_size"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/field_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_game_tutorial"
        android:icon="@drawable/ic_help_24dp"
        android:title="@string/tutorial"
        app:showAsAction="never" />
</menu>